📝 Fix a typo in the PR #1586 change note

--- a/CHANGES/1586.packaging.rst
+++ b/CHANGES/1586.packaging.rst
@@ -1,4 +1,4 @@
-The in-tree build backend to allows the end-users appending
+The in-tree build backend allows the end-users appending
 ``CFLAGS`` and ``LDFLAGS`` by setting respective environment
 variables externally.
 
