--- a/CHANGES/1607.feature.rst
+++ b/CHANGES/1607.feature.rst
@@ -1,2 +1,2 @@
-Added support for ``pydantic``, the :class:`URL` could be used as a
+Added support for ``pydantic``, the :class:`~yarl.URL` could be used as a
 field type in ``pydantic`` models seamlessly (see also yarl-pydantic-support_ in docs).
